20111204: V1.5.7
  + smm_signal_break.c: Fixed a bug that the custom signal callback was not
  hooked indeed.

20111125: FFMPEG version list
  + Finally found the culprit. There were two FFMPEG installs in my 
    ubuntu 10.10. One was 0.6.x. Another one appeared as 0.8.x. 
    By removing the latter the problem is gone.

Library:        libavformat  libavcodec  libavdevice  libavutil  libswscale  libavfilter
ffmpeg-0.6.1:   52.64.2      52.72.2     52.2.0       50.15.1    0.11.0      1.19.0
ffmpeg-0.6.3:   52.64.2      52.72.2     52.2.0       50.15.1    0.11.0      1.19.0
ffmpeg-0.7.8:   52.111.0     52.123.0    52.5.0       50.43.0    0.14.1      1.80.0
ubuntu 10.10:   52.64.2      52.72.2     52.2.0       50.15.1    0.11.0
ubuntu extra:   53.0.3       53.1.1      53.0.0       51.1.0     0.14.0



20111124:
  + I've got sick off the endless guess work about the FFMPEG's API version
    changes so I downloaded the 0.7.8 to revise the proper version macro.
    I believe most parts are fine except the av_dump_format(). There's no clue
    of when it was introduced.
  + Apparently the FFMPEG's APIChanges.txt has something wrong about the 
    version and avformat_open_input(). Defer to current FFMPEG lib
  + Made up the missing freetype6.dll in the Windows release

20111123: V1.5.6
  + Merged partly from guidev about the LIBAVFORMAT_VERSION macro to 
    make the makefile workable in archlinux, ubuntu 10.10 and mingw
  + Implemented a simple build-in profile.

20111122: 
  + Release tag: RELEASE_1_5_5
  + All .a files were missing under the mswin/ directory because of the 
    wrong setting of the .gitignore file. Now retrieved them.

20111115: V1.5.5 
  + Integrated other libraries into the mswin branch so they could 
    be managed by git
  + Revisioned the makefile for MinGW

20111104:
  + Revisioned this project in MinGW and made it workable in MS Windows
  + Fixed the conditional compiling error for the FFMPEG version control

20111021: V1.5.4